--- a/index.html
+++ b/index.html
@@ -55,23 +55,25 @@
         <p>CEO, Epicode</p>
       </div>
 
-      <sec>
-        <img src="./images/foto1.jpg" alt="foto1" />
-        <h4>Il tuo PC</h4>
-        <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
-      </sec>
+      <article>
+        <sec id="bordi">
+          <img src="./images/foto1.jpg" alt="foto1" />
+          <h4>Il tuo PC</h4>
+          <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
+        </sec>
 
-      <sec>
-        <img src="./images/foto2.jpg" alt="foto2" />
-        <h4>Impara Ora</h4>
-        <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
-      </sec>
+        <sec id="bordi">
+          <img src="./images/foto2.jpg" alt="foto2" />
+          <h4>Impara Ora</h4>
+          <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+        </sec>
 
-      <sec>
-        <img src="./images/foto3.jpg" alt="foto3" />
-        <h4>Lavora subito</h4>
-        <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
-      </sec>
+        <sec id="bordi">
+          <img src="./images/foto3.jpg" alt="foto3" />
+          <h4>Lavora subito</h4>
+          <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+        </sec>
+      </article>
     </main>
 
     <footer>
