--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <dd><a href="#">(+39) 11223456</a></dd>
         <dd><a href="#">info@epicode.school</a></dd>
         <dd>Via Appia 1 -00100 Roma(RM)</dd>
-        <p>2021. Immagini di Pixabay</p>
+        <p>2021. Immagini di <span> Pixabay</span></p>
       </dl>
     </footer>
   </body>
