--- a/index.html
+++ b/index.html
@@ -56,30 +56,32 @@
       </div>
 
       <article>
-        <sec id="bordi">
+        <section class="bordi">
           <img src="./images/foto1.jpg" alt="foto1" />
           <h4>Il tuo PC</h4>
           <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
-        </sec>
+        </section>
 
-        <sec id="bordi">
+        <section class="bordi">
           <img src="./images/foto2.jpg" alt="foto2" />
           <h4>Impara Ora</h4>
           <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
-        </sec>
+        </section>
 
-        <sec id="bordi">
+        <section class="bordi">
           <img src="./images/foto3.jpg" alt="foto3" />
           <h4>Lavora subito</h4>
           <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
-        </sec>
+        </section>
       </article>
     </main>
 
     <footer>
       <h2>Contattaci</h2>
       <dl>
-        <dd><a href="#">(+39) 11223456</a></dd>
+        <dd>
+          <a href="#">(+39) 11223456</a>
+        </dd>
         <dd><a href="#">info@epicode.school</a></dd>
         <dd>Via Appia 1 -00100 Roma(RM)</dd>
         <p>2021. Immagini di <span> Pixabay</span></p>
