--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
     <header>
-      <img src="./images/logo.png" alt="Logo Epicode School" />
+      <img src="./assets/images/logo.png" alt="Logo Epicode School" />
 
       <div>
         <h2 class="First">Corso Web Developer</h2>
@@ -38,7 +38,7 @@
       </sec>
 
       <sec>
-        <img id="tonda" src="./images/notebook.jpg" alt="notebook" />
+        <img id="tonda" src="./assets/images/notebook.jpg " alt="notebook" />
         <h4>Scegli il tuo ruolo</h4>
         <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
       </sec>
@@ -57,19 +57,19 @@
 
       <article>
         <section class="bordi">
-          <img src="./images/foto1.jpg" alt="foto1" />
+          <img src="./assets/images/foto1.jpg" alt="foto1" />
           <h4>Il tuo PC</h4>
           <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </section>
 
         <section class="bordi">
-          <img src="./images/foto2.jpg" alt="foto2" />
+          <img src="./assets/images/foto2.jpg" alt="foto2" />
           <h4>Impara Ora</h4>
           <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
         </section>
 
         <section class="bordi">
-          <img src="./images/foto3.jpg" alt="foto3" />
+          <img src="./assets/images/foto3.jpg" alt="foto3" />
           <h4>Lavora subito</h4>
           <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
         </section>
